infrastructure/planner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: planner
  replicas: 1
  template:
    metadata:
      labels:
        app: planner
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1000
      containers:
      - name: planner
        image: franrobles8/planner:v2.0
        securityContext:
          allowPrivilegeEscalation: false
