infrastructure/weatherservice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherservice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: weatherservice
  replicas: 1
  template:
    metadata:
      labels:
        app: weatherservice
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1000
      containers:
      - name: weatherservice
        image: franrobles8/weatherservice:v2.0
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: weatherservice-service
  labels:
    app: weatherservice
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: weatherservice-port
  selector:
    app: weatherservice
  type: ClusterIP
