infrastructure/server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
        networking/allow-mysql-access: "true"
        networking/allow-rabbitmq-access: "true"
        networking/allow-internet-access-to-server: "true"
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1000
      containers:
      - name: server
        image: franrobles8/server:v2.0
        securityContext:
          allowPrivilegeEscalation: false
        command: ["bash"]
        args:
        - "-c"
        - "./wait-for-it.sh mysql-service:3306 -t 500 -- ./wait-for-it.sh rabbitmq-service:5672 -t 500 -- node src/server.js"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: server-port
  selector:
    app: server
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  labels:
    app: server
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-service
                port:
                  number: 3000
