infrastructure/toposervice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toposervice-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: toposervice
  replicas: 1
  template:
    metadata:
      labels:
        app: toposervice
    spec:
      restartPolicy: Always
      containers:
      - name: toposervice
        image: franrobles8/toposervice:v2.0
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: toposervice-service
  labels:
    app: toposervice
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: toposervice-port
  selector:
    app: toposervice
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toposervice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /toposervice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: toposervice-service
                port:
                  number: 8080
