infrastructure/networking-allow-mongodb-access.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongodb-access
spec:
  podSelector:
    matchLabels:
      app: "mongodb"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          networking/allow-mongodb-access: "true"
    ports:
      - protocol: TCP
        port: 27017
