infrastructure/networking-allow-rabbitmq-access.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-access
spec:
  podSelector:
    matchLabels:
      app: "rabbitmq"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          networking/allow-rabbitmq-access: "true"
    ports:
      - protocol: TCP
        port: 5672
